--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,8 @@ body {
   padding: 0;
   background-color: white;
   overflow-x: hidden;
-  font-family: 'Lato', sans-serif;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  font-family: "Lato", sans-serif;
+  box-sizing: border-box;
   width: 100vw;
 }
 
@@ -30,68 +29,45 @@ nav {
   font-weight: bold;
   margin-top: 1em;
 }
-
 nav .join {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   background-color: #1A0D76;
   border-radius: 2em;
   width: 3.5vw;
 }
 
 #logo {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   float: left;
   line-height: 60px;
   gap: 0.5em;
-  -webkit-transform: scale(0.9) translateY(-0.7em);
-          transform: scale(0.9) translateY(-0.7em);
+  transform: scale(0.9) translateY(-0.7em);
 }
-
 #logo .bnmlogo {
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+  align-self: center;
   width: 5.5em;
   height: 6em;
-  -webkit-transform: translateY(-0.2em);
-          transform: translateY(-0.2em);
+  transform: translateY(-0.2em);
 }
-
 #logo .ncclogo {
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+  align-self: center;
   width: 4em;
 }
-
 #logo .text {
   height: 5em;
-  -webkit-transform: translateX(1em);
-          transform: translateX(1em);
+  transform: translateX(1em);
 }
-
 #logo .text .wordmark {
   font-weight: 900;
   font-size: 1.8rem;
-  -webkit-transform: translateY(-1em);
-          transform: translateY(-1em);
+  transform: translateY(-1em);
 }
-
 #logo .text .caption {
   font-weight: bold;
   font-size: 1.3rem;
-  -webkit-transform: translateY(-4em);
-          transform: translateY(-4em);
+  transform: translateY(-4em);
 }
 
 nav:after {
@@ -168,11 +144,11 @@ nav ul ul ul li {
 }
 
 li > a:after {
-  content: ' ▼';
+  content: " ▼";
 }
 
 li > a:only-child:after {
-  content: '';
+  content: "";
 }
 
 .homepage {
@@ -184,7 +160,6 @@ li > a:only-child:after {
   width: 100%;
   height: 100vh;
 }
-
 .homepage .hero {
   position: absolute;
   width: 65vw;
@@ -192,7 +167,6 @@ li > a:only-child:after {
   top: -10vw;
   z-index: 2;
 }
-
 .homepage .orange-background {
   position: relative;
   background-color: #FF5C00;
@@ -202,7 +176,6 @@ li > a:only-child:after {
   left: 45%;
   overflow: hidden;
 }
-
 .homepage .orange-background .hero-background {
   overflow-x: hidden;
   margin: 0;
@@ -211,7 +184,6 @@ li > a:only-child:after {
   width: 250%;
   mix-blend-mode: soft-light;
 }
-
 .homepage .hero-text {
   position: absolute;
   top: 25%;
@@ -219,34 +191,25 @@ li > a:only-child:after {
   line-height: 1.5em;
   z-index: 5;
 }
-
 .homepage .hero-text h1 {
   font-weight: 900;
-  font-size: 3.3vw;
+  font-size: 2.5vw;
   color: #1A0D76;
 }
-
 .homepage .hero-text h3 {
   font-weight: bold;
-  font-size: 1.9vw;
+  font-size: 1.8vw;
 }
-
 .homepage .hero-text .join-cta {
   background-color: #1A0D76;
   width: 8em;
   height: 3em;
   border-radius: 8em;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   font-weight: bold;
-  font-size: 1.7vw;
+  font-size: 1.3vw;
   color: white;
   text-decoration: none;
 }
@@ -259,7 +222,6 @@ li > a:only-child:after {
   top: 26em;
   overflow: hidden;
 }
-
 .aboutpage .ribbon {
   overflow: hidden;
   z-index: 4;
@@ -268,7 +230,6 @@ li > a:only-child:after {
   top: -8em;
   height: 100%;
 }
-
 .aboutpage .ribbon .red-vector {
   position: absolute;
   top: 10em;
@@ -278,7 +239,6 @@ li > a:only-child:after {
   -webkit-clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
           clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
 }
-
 .aboutpage .ribbon .navyblue-vector {
   position: absolute;
   top: 12em;
@@ -288,7 +248,6 @@ li > a:only-child:after {
   -webkit-clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
           clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
 }
-
 .aboutpage .ribbon .skyblue-vector {
   position: absolute;
   top: 14em;
@@ -298,61 +257,52 @@ li > a:only-child:after {
   -webkit-clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
           clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
 }
-
 .aboutpage .about-main-content {
   z-index: 5;
   background-color: #518BBB;
   position: relative;
   top: 15em;
-  height: 85vw;
+  height: auto;
 }
-
 .aboutpage .about-main-content .about-ncc {
   position: relative;
   top: 0em;
 }
-
 .aboutpage .about-main-content .about-ncc h1 {
-  font-size: 3vw;
+  font-size: 2.5vw;
   color: white;
   font-weight: 800;
   position: relative;
   left: 20vw;
 }
-
 .aboutpage .about-main-content .about-ncc h3 {
   position: relative;
   color: #1A0D76;
-  font-size: 2.2vw;
+  font-size: 1.8vw;
   width: 65%;
   left: 21vw;
 }
-
 .aboutpage .about-main-content .about-bnmit-ncc {
   position: relative;
   top: 3em;
 }
-
 .aboutpage .about-main-content .about-bnmit-ncc img {
-  width: 100%;
+  left: 8em;
 }
-
 .aboutpage .about-main-content .about-bnmit-ncc h1 {
-  font-size: 3vw;
+  font-size: 2.5vw;
   color: white;
   font-weight: 800;
   position: relative;
   left: 15vw;
 }
-
 .aboutpage .about-main-content .about-bnmit-ncc h3 {
   position: relative;
   color: #1A0D76;
-  font-size: 2.2vw;
+  font-size: 1.8vw;
   width: 65%;
   left: 16vw;
 }
-
 .aboutpage .about-main-content section {
   width: 100vw;
   overflow: hidden;
@@ -360,24 +310,17 @@ li > a:only-child:after {
   top: 4em;
   padding: 0;
 }
-
 .aboutpage .about-main-content section article {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width: 200%;
   -webkit-animation: bannermove 20s linear infinite;
           animation: bannermove 20s linear infinite;
   gap: 3em;
 }
-
 .aboutpage .about-main-content section div {
   width: 100%;
 }
-
 .aboutpage .about-main-content section ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   background: none;
   list-style-type: none;
@@ -385,175 +328,136 @@ li > a:only-child:after {
   margin: 0;
   gap: 3em;
 }
-
 .aboutpage .about-main-content section li {
   width: 100%;
   background: blue;
 }
-
 .aboutpage .about-main-content section li:nth-child(2) {
   background: green;
 }
-
 .aboutpage .about-main-content section li:nth-child(3) {
   background: yellow;
 }
-
 .aboutpage .about-main-content section img {
   border: 0.7em solid #1A0D76;
   display: block;
   width: 100%;
 }
-
 @-webkit-keyframes bannermove {
   0% {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
+    transform: translateX(0);
   }
   100% {
-    -webkit-transform: translateX(-50%);
-            transform: translateX(-50%);
+    transform: translateX(-50%);
   }
 }
-
 @keyframes bannermove {
   0% {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
+    transform: translateX(0);
   }
   100% {
-    -webkit-transform: translateX(-50%);
-            transform: translateX(-50%);
+    transform: translateX(-50%);
   }
 }
-
 .aboutpage .about-main-content-2 {
   position: relative;
-  top: 20em;
-  left: 5em;
+  padding-top: 20em;
+  left: 14%;
   width: 100%;
-  height: 120em;
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 30vw 30vw;
-      grid-template-columns: 30vw 30vw;
-  -ms-grid-rows: 20vw 30vw 50em;
-      grid-template-rows: 20vw 30vw 50em;
-  -webkit-column-gap: 10em;
-          column-gap: 10em;
+  grid-template-columns: 30% 30%;
+  grid-template-rows: auto auto auto;
+  -moz-column-gap: 10em;
+       column-gap: 10em;
 }
-
 .aboutpage .about-main-content-2 .content-container {
   position: relative;
   top: 0em;
 }
-
 .aboutpage .about-main-content-2 .content-container h1 {
-  font-size: 3vw;
+  font-size: 2.5vw;
   color: #1A0D76;
   font-weight: 800;
   position: relative;
 }
-
 .aboutpage .about-main-content-2 .content-container h3 {
   position: relative;
   color: #1A0D76;
-  font-size: 2.2vw;
+  font-size: 1.7vw;
 }
-
 .aboutpage .about-main-content-2 .content-container:nth-child(4) {
-  -ms-grid-row: 1;
-      grid-row-start: 1;
+  grid-row-start: 1;
   grid-row-end: 4;
-  -ms-grid-column: 2;
-      grid-column-start: 2;
+  grid-column-start: 2;
   grid-column-end: 3;
 }
-
 .aboutpage .about-main-content-2 .content-container:nth-child(3) {
-  -ms-grid-column: 1;
-      grid-column-start: 1;
+  grid-column-start: 1;
   grid-column-end: 2;
 }
 
 .activitiespage {
   position: relative;
-  z-index: 7;
-  top: 220em;
+  top: 175em;
   margin: 0;
   left: 5em;
+  height: auto;
 }
-
 .activitiespage .heading {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   overflow: hidden;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   gap: 3em;
+  flex-grow: 0;
+  flex-shrink: 0;
 }
-
 .activitiespage .heading h1 {
   padding: 0;
-  font-size: 3vw;
+  font-size: 2.5vw;
   font-weight: 800;
   color: black;
   white-space: nowrap;
 }
-
 .activitiespage .heading .line {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   margin: auto;
   width: 80vw;
   height: 1em;
   background-color: #FF001E;
 }
-
 .activitiespage .card-slider {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   overflow: hidden;
   gap: 3em;
+  width: 100%;
 }
-
 .activitiespage .card-slider .card {
+  display: inline-block;
   width: 30em;
   height: 20em;
   background-color: #E4E4E4;
   border-radius: 2em;
 }
-
 .activitiespage .card-slider .card a {
   text-decoration: none;
-  font-size: 2.3rem;
+  font-size: 1.8rem;
   font-weight: bold;
   position: relative;
-  left: 7.4em;
-  top: 7.1em;
+  left: 11em;
+  top: 9.5em;
   color: black;
 }
 
 /* Media Queries
-  --------------------------------------------- */
+--------------------------------------------- */
 @media all and (max-width: 915px) {
   #logo {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     padding: 0;
     width: 100%;
     text-align: left;
     float: none;
-    -webkit-box-pack: left;
-        -ms-flex-pack: left;
-            justify-content: left;
-    -webkit-transform: scale(0.8) translateX(-3em);
-            transform: scale(0.8) translateX(-3em);
+    justify-content: left;
+    transform: scale(0.8) translateX(-3em);
   }
   nav a {
     font-size: 20px;
@@ -569,7 +473,7 @@ li > a:only-child:after {
     display: none;
   }
   .toggle + a,
-  .menu {
+.menu {
     display: none;
   }
   .toggle {
@@ -598,18 +502,18 @@ li > a:only-child:after {
     width: 100%;
   }
   nav ul ul .toggle,
-  nav ul ul a {
+nav ul ul a {
     padding: 0 40px;
   }
   nav ul ul ul a {
     padding: 0 80px;
   }
   nav a:hover,
-  nav ul ul ul a {
+nav ul ul ul a {
     background-color: #000000;
   }
   nav ul li ul li .toggle,
-  nav ul ul a {
+nav ul ul a {
     background-color: #1A0D76;
   }
   nav ul ul {
@@ -618,7 +522,7 @@ li > a:only-child:after {
     color: #ffffff;
   }
   nav ul ul li:hover > ul,
-  nav ul li:hover > ul {
+nav ul li:hover > ul {
     display: none;
   }
   nav ul ul li {
@@ -661,7 +565,7 @@ li > a:only-child:after {
   }
   .aboutpage .about-main-content {
     top: 8em;
-    height: 75%;
+    height: auto;
   }
   .aboutpage .about-main-content .about-ncc h1 {
     font-size: 2.2em;
@@ -697,13 +601,11 @@ li > a:only-child:after {
     border: 0.3em solid #1A0D76;
   }
   .aboutpage .about-main-content-2 {
-    top: 12em;
-    height: 100%;
-    left: 8%;
-    -ms-grid-columns: 90%;
-        grid-template-columns: 90%;
-    -ms-grid-rows: auto auto auto auto;
-        grid-template-rows: auto auto auto auto;
+    padding-top: 12em;
+    height: auto;
+    left: 6%;
+    grid-template-columns: 90%;
+    grid-template-rows: auto auto auto auto;
     gap: 0;
   }
   .aboutpage .about-main-content-2 .content-container h1 {
@@ -713,15 +615,12 @@ li > a:only-child:after {
     font-size: 1.2em;
   }
   .aboutpage .about-main-content-2 .content-container:nth-child(4) {
-    -ms-grid-column: 1;
-        grid-column-start: 1;
+    grid-column-start: 1;
     grid-column-end: 2;
-    -ms-grid-row: 4;
-        grid-row-start: 4;
+    grid-row-start: 4;
     grid-row-end: 5;
   }
 }
-
 @media all and (max-width: 420px) {
   nav ul li {
     display: block;
@@ -776,10 +675,8 @@ li > a:only-child:after {
     top: 13em;
     height: 130em;
     left: 1em;
-    -ms-grid-columns: 18em;
-        grid-template-columns: 18em;
-    -ms-grid-rows: 12em 17em 33em 33em;
-        grid-template-rows: 12em 17em 33em 33em;
+    grid-template-columns: 18em;
+    grid-template-rows: 12em 17em 33em 33em;
     gap: 0;
   }
   .aboutpage .about-main-content-2 .content-container h1 {
@@ -790,12 +687,9 @@ li > a:only-child:after {
     font-size: 1.2em;
   }
   .aboutpage .about-main-content-2 .content-container:nth-child(4) {
-    -ms-grid-column: 1;
-        grid-column-start: 1;
+    grid-column-start: 1;
     grid-column-end: 2;
-    -ms-grid-row: 4;
-        grid-row-start: 4;
+    grid-row-start: 4;
     grid-row-end: 5;
   }
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
